# CryptoTrader_Agents

./: .env.example  .gitignore  CLAUDE.md  README.md  README_AUTONOMOUS.md  SMART_SCHEDULER.md  TEST_MODE.md  TRADING_MODES.md  crypto_trader_documentation.md  market_state.json  pyproject.toml  run_extended_test.py  run_real_trading.py  run_smart_scheduler.py  run_test_mode.py  run_test_mode_fixed.py  scheduler_config.yaml
output/: autonomous_trading_strategy_20250807_154610.md  daily_report_20250807.md  test_mode_portfolio.json  test_mode_reports.json  test_mode_trades.json  test_simulation_final_report_20250807_102031.json  test_simulation_final_report_20250807_153511.json  trading_plan_BNBUSDT_20250516_090859.md  trading_plan_ETHUSDT_20250515_222052.md  trading_plan_ETHUSDT_20250608_210953.md  trading_plan_PEPEUSDT_20250515_222658.md  trading_plan_PEPEUSDT_20250516_090338.md
src/crypto_trader/: autonomous_crew.py  autonomous_main.py  crew.py  ionos_llm.py  main.py  portfolio_simulator.py  smart_scheduler.py  test_mode_crew.py  test_mode_main.py
src/crypto_trader/config/: agents.yaml  autonomous_tasks.yaml  enhanced_agents.yaml  tasks.yaml  test_mode_agents.yaml  test_mode_tasks.yaml
src/crypto_trader/tests/: test_tools.py
src/crypto_trader/tools/: binance_direct_tool.py  binance_rapidapi_tool.py  portfolio_simulator_tool.py
